styles.css
:root {
    --color-text: hsl(200, 15%, 8%);
    --color-input: hsl(0, 0%, 52%);
    --color-background: hsl(0, 0%, 98%);
    --color-header-background: hsl(0, 0%, 100%);
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.filters {
}

.filter.active {
    display:flex;
    justify-content: space-between;
    margin-bottom: 30px;
    margin: 20px;
}

#query {
    border:none;
    background-color: var(--color-background);
    box-shadow: 2px 2px 2px 2px rgba(66, 68, 90, 1);
    padding: 15px 30px;
}

.filters, main {
    max-width: 1280px;
    margin: 0 auto;
    padding: 0 32px;
}

header {
    background-color: var(--color-header-background);
    margin-bottom: 32px;
}

header button {
    background:none;
    border:none;
    cursor:pointer;
    font-size: 24px;
}

body {
    background-color: var(--color-background);
    color:var(--color-text);
    font-size:14px;
    font-family: 'Nunito Sans', sans-serif;
}

ul {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    list-style:none;
    gap:70px
}

li {
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 1px 9px 24px 0px rgba(66, 68, 90, 1);
}

li a {
    text-decoration: none;
    color: var(--color-text);
}

li img {
    aspect-ratio: 160/98;
    width: 100%;
}

.info-container {
    padding: 30px 20px; 
}

.country-name {
    font-size:18px;
    display:block;
    margin-bottom: 10px;
}

.header-content {
    max-width: 1280px;
    display:flex;
    justify-content: space-between;
    margin: 32px 665px;
}

@media only screen and (max-width: 1000px) {
    ul {
        grid-template-columns: 1fr 1fr 1fr;
    }
}
@media only screen and (max-width: 600px) {
    ul {
        grid-template-columns: 1fr 1fr;
    }
}
@media only screen and (max-width: 400px) {
    ul {
        grid-template-columns: 1fr;
    }
}

